--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </div>
                 <!--second-->
                 <div class="client col-xs-3 col-sm-6 col-md-3">
-                  <img src="asset/img/pp.gif.">
+                  <img src="asset/img/pp.gif">
                   <h3>Voluptatem dolores</h3>
                   <p>Ullam nihil repudi</p>
                 </div>
